new harvester logic, stricter typescript, simplified creep memory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "target": "es2017",
     "sourceMap": false,
     "outDir": "./dist",
-    "removeComments": true
+    "removeComments": true,
+    "strict": true,
+    "strictNullChecks": true
   }
 }
